# cross-seed-tools

./: .env.sample  .gitignore  Cargo.toml  README.md
docker/: Dockerfile
src/: announce.rs  inject_seedbox_torrents.rs  main.rs  xseed.rs
src/cross_seed/: mod.rs
src/data_types/: radarr.rs  sonarr.rs
src/discord/: mod.rs
