[package]
name = "cross-seed-tools"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenvy = "0.15.7"
axum = { version = "0.8.1", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12.12", features = ["json"] }
log = "0.4.26"
env_logger = "0.11.6"
qbit-rs = { git = "https://github.com/George-Miao/qbit.git", branch = "master" }
anyhow = "1.0.98"
